# sonex_proj

./: README.md  pyproject.toml
sonnex/: manage.py
sonnex/accounts/: models.py
sonnex/fashion/: apps.py  views.py
sonnex/fashion/templates/fashion/: index.html
sonnex/sonnex/: asgi.py  settings.py  urls.py  wsgi.py
