[tool.poetry]
name = "sonex-proj"
version = "0.1.0"
description = "A Clothing brand for Unique Designs"
authors = ["SimpleNick <simplenick01@gmail.com>"]
readme = "README.md"
packages = [{include = "sonex_proj"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-jazzmin = "^2.6.0"
pytest = "^7.2.0"
django-environ = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
